syntax="proto3";
package session;

option go_package="task_service/src/internal/intefaces/input/grpc";

service SessionValidator{
    rpc ValidateSession(ValidateSessionRequest)returns(ValidateSessionResponse);
}

message ValidateSessionRequest{
    string session_id=1;
}
message ValidateSessionResponse{
    bool valid=1;
    string user_id=2;
    string error=3;
}